--- a/argocd/base/argo-cd-ui-ingress.yaml
+++ b/argocd/base/argo-cd-ui-ingress.yaml
@@ -5,12 +5,12 @@ metadata:
   annotations:
     ingress.kubernetes.io/proxy-body-size: 100M
     ingress.kubernetes.io/app-root: "/"
+    alb.ingress.kubernetes.io/scheme: internet-facing
 spec:
-  ingressClassName: nginx
+  ingressClassName: alb
   tls:
   - hosts:
-    - cd.apps.argoproj.io
-    secretName: argocd-secret
+    - argo.duoeks.com
   rules:
   - host: cd.apps.argoproj.io
     http:
