--- a/argocd/base/argo-cd-ui-ingress.yaml
+++ b/argocd/base/argo-cd-ui-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: argo.duoeks.com
     ingress.kubernetes.io/proxy-body-size: 100M
     ingress.kubernetes.io/app-root: "/"
+    alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:345796856102:certificate/3002d232-daa4-4493-aeb7-9aaec53cfcf0
