--- a/argocd/base/argo-cd-ui-ingress.yaml
+++ b/argocd/base/argo-cd-ui-ingress.yaml
@@ -16,16 +16,5 @@ metadata:
 spec:
   ingressClassName: alb
   tls:
-  - hosts:
-    - argo.duoeks.com
-  rules:
-  - host: argo.duoeks.com
-    http:
-      paths:
-      - path: /
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: argocd-server
-            port:
-              name: https
+    hosts:
+      - argo.duoeks.com
