--- a/argocd/base/argo-cd-ui-ingress.yaml
+++ b/argocd/base/argo-cd-ui-ingress.yaml
@@ -1,8 +1,42 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: argo-cd-ui
-  annotations:
+  apiVersion: networking.k8s.io/v1
+  kind: Ingress
+  metadata:
+    annotations:
+      alb.ingress.kubernetes.io/backend-protocol: HTTPS
+      # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
+      alb.ingress.kubernetes.io/conditions.argogrpc: |
+        [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
+      external-dns.alpha.kubernetes.io/hostname: argo.duoeks.com
+      alb.ingress.kubernetes.io/target-type: ip
+      alb.ingress.kubernetes.io/scheme: internet-facing
+      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:345796856102:certificate/3002d232-daa4-4493-aeb7-9aaec53cfcf0
+      alb.ingress.kubernetes.io/healthcheck-path: /healthz
+    name: argocd
+    namespace: argocd
+  spec:
+    rules:
+    - host: argocd.argoproj.io
+      http:
+        paths:
+        - path: /
+          backend:
+            service:
+              name: argogrpc
+              port:
+                number: 443
+          pathType: Prefix
+        - path: /
+          backend:
+            service:
+              name: argocd-server
+              port:
+                number: 443
+          pathType: Prefix
+    tls:
+    - hosts:
+      - argocd.argoproj.io
+
     external-dns.alpha.kubernetes.io/hostname: argo.duoeks.com
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/scheme: internet-facing
@@ -11,21 +45,3 @@ metadata:
     alb.ingress.kubernetes.io/healthcheck-path: /healthz
     alb.ingress.kubernetes.io/backend-protocol: HTTPS
     alb.ingress.kubernetes.io/backend-protocol: HTTPS
-
-
-spec:
-  ingressClassName: alb
-  tls:
-  - hosts:
-    - argo.duoeks.com
-  rules:
-  - host: argo.duoeks.com
-    http:
-      paths:
-      - path: /
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: argocd-server
-            port:
-              name: http
