--- a/argocd/base/argo-cd-ui-ingress.yaml
+++ b/argocd/base/argo-cd-ui-ingress.yaml
@@ -2,6 +2,7 @@
   kind: Ingress
   metadata:
     annotations:
+      kubernetes.io/ingress.class: alb
       alb.ingress.kubernetes.io/backend-protocol: HTTPS
       # Use this annotation (which must match a service name) to route traffic to HTTP2 backends.
       alb.ingress.kubernetes.io/conditions.argogrpc: |
@@ -12,11 +13,12 @@
       alb.ingress.kubernetes.io/scheme: internet-facing
       alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:345796856102:certificate/3002d232-daa4-4493-aeb7-9aaec53cfcf0
       alb.ingress.kubernetes.io/healthcheck-path: /healthz
+      alb.ingress.kubernetes.io/target-type: ip
     name: argocd
     namespace: argocd
   spec:
     rules:
-    - host: argo.duoeks.com
+    - host: argocd.argoproj.io
       http:
         paths:
         - path: /
@@ -35,4 +37,13 @@
           pathType: Prefix
     tls:
     - hosts:
-      - argo.duoeks.com
+      - argocd.argoproj.io
+
+    external-dns.alpha.kubernetes.io/hostname: argo.duoeks.com
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:345796856102:certificate/3002d232-daa4-4493-aeb7-9aaec53cfcf0
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
+    alb.ingress.kubernetes.io/healthcheck-path: /healthz
+    alb.ingress.kubernetes.io/backend-protocol: HTTPS
+    alb.ingress.kubernetes.io/backend-protocol: HTTPS
