--- a/argocd/base/argo-cd-ui-ingress.yaml
+++ b/argocd/base/argo-cd-ui-ingress.yaml
@@ -18,7 +18,7 @@
     namespace: argocd
   spec:
     rules:
-    - host: argocd.argoproj.io
+    - host: argo.duoeks.com
       http:
         paths:
         - path: /
@@ -37,4 +37,4 @@
           pathType: Prefix
     tls:
     - hosts:
-      - argocd.argoproj.io
+      - argo.duoeks.com
