--- a/argocd/base/argo-cd-ui-ingress.yaml
+++ b/argocd/base/argo-cd-ui-ingress.yaml
@@ -12,7 +12,8 @@
       # alb.ingress.kubernetes.io/target-type: ip
       alb.ingress.kubernetes.io/scheme: internet-facing
       alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:345796856102:certificate/3002d232-daa4-4493-aeb7-9aaec53cfcf0
-      # alb.ingress.kubernetes.io/healthcheck-path: /healthz
+      alb.ingress.kubernetes.io/healthcheck-port: 443
+      alb.ingress.kubernetes.io/healthcheck-path: /healthz
     name: argocd
     namespace: argocd
   spec:
